--- a/yemek-tarifi-case2/package.json
+++ b/yemek-tarifi-case2/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
-    "next": "15.1.0",
+    "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
